# SGXDataCenterAttestationPrimitives

./: Cargo.toml
QuoteGeneration/quote_wrapper/sgx-dcap-ql-sys/: Cargo.toml  build.rs
QuoteGeneration/quote_wrapper/tdx-attest-sys/: Cargo.toml
SampleCode/RustSGXQuoteGenerationSample/: Cargo.toml
