[package]
name = "sgx-dcap-ql-sys"
version = "0.1.0"
edition = "2021"
links = "sgx_dcap_ql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = { git = "https://github.com/automata-network/rust-bindgen.git", branch = "v0.59.2-log", package = "bindgen" }
# bindgen = "0.59.1"
